# loan_application_triage

./: .env.example  README.md  main.py  pyproject.toml
examples/: sample_application_1.txt  sample_application_2.txt  sample_application_3.txt
src/: orchestrator.py  state.py
src/agents/: decision.py  human_verification.py  intake.py  verification.py
src/tools/: credit_bureau.py  employment.py
src/util/: human_verification_handler.py  llm.py  phoenix.py
